--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <h1>Weather App</h1>
-        <input type="text" class="inputBtn" id="locationInput" placeholder="Enter city or zip code">
+        <input type="text" class="inputBtn" id="location" placeholder="Enter city or zip code">
         <button onclick="getWeather()">Get Weather</button>
-        <div id="weatherInfo"></div>
+        <div id="weatherInformation"></div>
     </div>
     <script src="script.js"></script>
 </body>
